event list added in bottom sheet dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="thursday">THU</string>
     <string name="friday">FRI</string>
     <string name="sat">SAT</string>
+    <string name="events_for">Events for %s</string>
+    <string name="no_events_for_this_day">No events for this day</string>
 </resources>
