--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,11 @@
     <string name="goal_type">Goal Type</string>
     <string name="daily_schedule">Daily schedule to achieve goal</string>
     <string name="add_task">Add Task</string>
+    <string name="add_milestone">Add Milestone</string>
+    <string name="enter_title">Enter title</string>
+    <string name="enter_description">Enter description</string>
+    <string name="add">Add</string>
+    <string name="click_on_date">[Click on dates for selection]</string>
+    <string name="ok">ok</string>
+    <string name="attach_this_ms_to_goal">Attach this milestone to goal</string>
 </resources>
