--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,4 +65,6 @@
     <string name="plz_milestone_duration">Please select milestone duration</string>
     <string name="goal_is_saved">Goal is saved!</string>
     <string name="plz_select_valid_time">Please select valid time</string>
+    <string name="save_goal">Save Goal</string>
+    <string name="events">Events</string>
 </resources>
