stoic quotes completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="analysis">Analysis</string>
     <string name="notes">Notes</string>
     <string name="good_thoughts">Good Thoughts</string>
-    <string name="stocism">Daily Stoicism</string>
+    <string name="stocism">Stoicism</string>
     <string name="habit_tracking">Habit Tracking</string>
     <string name="add_title">Add Title</string>
     <string name="short_description">Short description</string>
