--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="weekly">Weekly</string>
     <string name="custom">Custom</string>
     <string name="goal_type">Goal Type</string>
-    <string name="daily_schedule">Daily schedule to achieve goal</string>
+    <string name="daily_schedule_to_goal">Daily schedule to achieve goal</string>
     <string name="add_task">Add Task</string>
     <string name="add_milestone">Add Milestone</string>
     <string name="enter_title">Enter title</string>
@@ -68,4 +68,5 @@
     <string name="save_goal">Save Goal</string>
     <string name="events">Events</string>
     <string name="plz_add_milestones">Please add milestones</string>
+    <string name="daily_schedule">Daily Schedule</string>
 </resources>
